goal creation page

--- a/FinancialAdvisorAppUI/Pages/FinanceTracking/Create.razor
+++ b/FinancialAdvisorAppUI/Pages/FinanceTracking/Create.razor
@@ -131,6 +131,8 @@
         if (processSucceeded) _toastService.ShowSuccess("Details submitted successfully", "");
         else _toastService.ShowError("Something went wrong");
 
+        _navManager.NavigateTo(AppConstants.LinkFinanceTracking);
+
 
 
     }
